added signu^p + transaction form + bug fixes
